      \item **80
      \item **81
      \item **82
      \item **83
      \item **84
      \item **85
      \item **86
      \item **87
      \item **88
      \item **89
      \item **90
      \item **91
      \item **92
      \item **93
      \item **94
      \item **95
      \item **96
      \item **97
      \item **98
      \item **99
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item **1
      \item **2
      \item **3
      \item **4
      \item Fixed documentation error in R-admin regarding the
            --disable-byte-compiled-packages configuration option, 
            and changed the DESCRIPTION file for the recommended mgcv 
            package to respect this option.
      \item **6
      \item Fixed a bug in numeric_deriv in stats/src/nls.c, where it
            was not duplicating when it should, as illustrated below:
\preformatted{
  > x <- 5; y <- 2; f <- function (y) x
  > numericDeriv(f(y),"y")
   [1] 5
   attr(,"gradient")
        [,1]
   [1,]    0
   > x
   [1] 5
   attr(,"gradient")
        [,1]
   [1,]    0
}
      \item **8
      \item **9
      \item **10
      \item **11
      \item **12
      \item **13
      \item **14
      \item **15
      \item **16
      \item **17
      \item Fixed a bug where more than six warning messages at startup
            would overwrite random memory, causing garbage output 
            and perhaps arbitrarily bizarre behaviour.
      \item Fixed a bug where LC_PAPER was not correctly set at startup.
      \item **20
      \item **21
      \item **22
      \item **23
      \item **24
      \item **25
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item **31
      \item **32
      \item Fixed a bug in which \code{Im(matrix(complex(0),3,4))} returned
            a matrix of zero elements rather than a matrix of NA elements.
      \item **34
      \item **35
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40